k8s/service-pod-1.yaml
apiVersion: v1
kind: Service
metadata:
  name: multi-test-service-1
  namespace: multi-test
  labels:
    app: multi-web-1
spec:
  selector:
    app: multi-web-1
  ports:
    - protocol: TCP
      port: 5035
      targetPort: 5005
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: multi-web-deployment-1
  namespace: multi-test
  labels:
    app: multi-web-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: multi-web-1
  template:
    metadata:
      labels:
        app: multi-web-1
    spec:
      containers:
      - name: nginx-web-1
        image: nginx-web-1:v1.0.0
        ports:
        - containerPort: 5008
        imagePullPolicy: Never
      - name: nginx-proxy
        image: nginx-proxy:v1.0.0
        ports:
        - containerPort: 5005
        imagePullPolicy: Never
