k8s/ingress-resource-web-2.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: multi-test-web-2
  annotations:
    kubernetes.io/ingress.class: kong
    konghq.com/strip-path: "true"
spec:
  rules:
  - host: myapp.example2.com
    http:
      paths:
      - path: /
        backend:
          serviceName: multi-test-service-2
          servicePort: 5035
